<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_main" >

    <TextView
        android:id="@+id/textview_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:gravity="center"
        android:text="@string/textview_start_label"
        android:textColor="#9C271C"
        android:textSize="20.5sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_spiner_difficulty"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic|bold" />

            <Spinner
                android:id="@+id/spinner_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_difficulty_item" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_spiner_total_problems"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic|bold" />

            <Spinner
                android:id="@+id/total_problem_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_total_problem" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_spiner_timer"
                android:textStyle="italic|bold"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/timer_value_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_timer_value" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_addtion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_addition_label" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_subtraction"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_subtraction_label" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_multiplication"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_multiplication_label" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_division"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_division_label" />
        </TableRow>
    </TableLayout>

</RelativeLayout>